# Google-Play-API

./: .gitignore  CMakeLists.txt
cmake/: FindLibUV.cmake
include/playapi/: api.h  checkin.h  device_info.h  experiments.h  file_login_cache.h  http_task.h  login.h  login_cache.h  request.h  task.h
include/playapi/util/: base64.h  http.h  http_request_pool.h  rand.h
lib/playapi/: api.cpp  api.h  checkin.cpp  checkin.h  config.cpp  device_info.cpp  device_info.h  experiments.cpp  file_login_cache.cpp  httputils.cpp  httputils.h  login.cpp  login.h  mcs_connection.cpp  mcs_connection.h  mcs_registration_api.cpp  mcs_registration_api.h
lib/playapi/util/: base64.cpp  base64.h  config.cpp  config.h  http.cpp  http.h  http_request_pool.cpp  protobuf_stream_wrapper.cpp  protobuf_stream_wrapper.h  rand.cpp  socket.cpp  socket.h  ssl_socket.cpp  ssl_socket.h  stream.h
lib/playdl/: checkin.cpp  checkin.h  config.cpp  config.h  device_info.cpp  device_info.h  httputils.cpp  httputils.h  login.cpp  login.h  rand.cpp  rand.h
proto/: gsf.proto  mcs.proto  play_browse.proto  play_common.proto  play_containers.proto  play_contentsync.proto  play_details.proto  play_device_config.proto  play_document.proto  play_download.proto  play_filter_rules.proto  play_link.proto  play_ownership.proto  play_respone.proto  play_search.proto  play_settings.proto  play_toc.proto
src/: arg_list.h  common.cpp  common.h  config.cpp  config.h  gplaydl.cpp  gplayver.cpp  main.cpp
